# oci2bin

./: .gitignore  CHANGELOG.md  CLAUDE.md  MANIFEST.in  Makefile  README.md  bugs-found.md  confidential-vm-design.md  flake.nix  mkdocs.yml  oci2bin  oci2vm  pyproject.toml  setup.py  test-plan-coverage.md
doc/: oci2bin.1  oci2bin.texi
docs/: build.md  concepts.md  index.md  local-preview.md  operations.md  quickstart.md  runtime.md  security.md  use-cases.md
kernel/: microvm.config
oci2bin_pkg/: _entry.py  oci2bin.bash
packaging/: oci2bin-scripts.txt
scripts/: add_files.py  build_polyglot.py  diff_fs.py  diff_images.py  dockerfile_build.py  doctor.py  explain.py  fetch_kernel.sh  freeze.py  from_chroot.py  fuzz_run.sh  inspect_image.py  merge_layers.py  oci_layout_to_tar.py  package_manifest.py  pod_stack.py  reconstruct.py  sbom_generate.py  sign_binary.py  squash_layers.py  strip_image.py  style.sh
src/: loader.c
tests/: Dockerfile.user-test  test_add_files.py  test_arch_wrapper.py  test_build.py  test_build_meta.py  test_c_stubs.c  test_c_units.c  test_cli_features.py  test_compress_binary.py  test_diff_fs.py  test_diff_syscalls.py  test_dockerfile_from_arch.py  test_dockerfile_run_env.py  test_dockerfile_run_parse.py  test_dockerfile_safe_resolve.py  test_dockerignore.py  test_doctor.py  test_embed_loader.py  test_encrypt.py  test_explain.py  test_freeze.py  test_inspect_extended.py  test_integration_encrypt.sh  test_integration_live.sh  test_integration_nginx.sh  test_integration_redis.sh  test_mcp_params_shape.py  test_merge_layers.py  test_polyglot.py  (+11 more)
(+80 files in other folders)
